--- a/style/info.css
+++ b/style/info.css
@@ -104,6 +104,7 @@ p {
   height: 620px;
   position: relative;
   margin: 190px auto 0 auto;
+  cursor: pointer;
 }
 .section-main .container .main-item {
   width: 100%;
@@ -133,6 +134,9 @@ p {
   line-height: 30px;
   position: absolute;
   top: 406px;
+}
+.section-main .container:hover .image {
+  transform: scale(1.1);
 }
 .section-main .button {
   margin: 0 auto;
@@ -169,11 +173,15 @@ p {
   line-height: 33px;
   font-weight: bold;
   color: white;
-  max-width: 410px;
+  width: 410px;
   height: 300px;
   border-radius: 30px;
   padding: 180px 0 0 40px;
   position: relative;
+}
+.section-features li:hover {
+  background: #272b34 !important;
+  cursor: pointer;
 }
 .section-features li:before, .section-features li:after {
   content: " ";
@@ -325,6 +333,10 @@ p {
   padding-top: 20px;
   background: url("../image/index/clover-icon.png") 0 0 no-repeat;
   background-size: 18px 18px;
+  cursor: pointer;
+}
+.token-section .token-content p:hover {
+  color: #fa6400;
 }
 
 .section-why h2 {
@@ -342,6 +354,10 @@ p {
 .section-why .why-content img {
   width: 50%;
   margin: 0 auto;
+  cursor: pointer;
+}
+.section-why .why-content img:hover {
+  transform: scale(1.1);
 }
 .section-why .why-content .item:first-child img {
   width: 258px;
@@ -1303,6 +1319,7 @@ p {
   min-height: 530px;
   padding-left: 80px;
   padding-bottom: 120px;
+  margin-bottom: 120px;
 }
 .section-contain h2 {
   font-family: Inter;
