--- a/style/info.css
+++ b/style/info.css
@@ -99,6 +99,17 @@ p {
   background-color: #172026;
 }
 
+@keyframes change {
+  0% {
+    transform: rotate(0deg);
+  }
+  50% {
+    transform: rotate(180deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 .section-main .container {
   max-width: 620px;
   height: 620px;
@@ -136,7 +147,7 @@ p {
   top: 406px;
 }
 .section-main .container:hover .image {
-  transform: scale(1.1);
+  animation: change 20s linear infinite;
 }
 .section-main .button {
   margin: 0 auto;
@@ -1369,6 +1380,10 @@ p {
     padding-top: 20px;
   }
 
+  .section-main .container {
+    margin-top: 30px;
+  }
+
   .section-contain {
     padding-bottom: 120px;
     background-position: right 160px;
@@ -1432,10 +1447,14 @@ p {
   }
 
   .section-features ul {
+    width: 100%;
     max-width: 410px;
     flex-direction: column;
     margin-left: auto;
     margin-right: auto;
+  }
+  .section-features li {
+    width: 100%;
   }
   .section-features li:nth-child(2) {
     margin: 40px 0;
