--- a/style/effect.css
+++ b/style/effect.css
@@ -1,119 +1,130 @@
-.features-section.effect h2.hidden, .features-section.effect p.hidden {
-  transform: translateY(60px);
+.section-main.effect .m-1.hidden, .section-main.effect .m-2.hidden, .section-main.effect .m-3.hidden {
+  transform: translateY(620px);
   opacity: 0;
 }
-.features-section.effect .feature-area.hidden, .features-section.effect .text-button.hidden {
-  transform: translateY(50px);
+.section-main.effect .m-4.hidden {
+  transform: translateY(100px);
   opacity: 0;
 }
-.features-section.effect h2.action, .features-section.effect p.action {
+.section-main.effect .m-1.action, .section-main.effect .m-2.action, .section-main.effect .m-3.action, .section-main.effect .m-4.action {
   transition-timing-function: linear;
   transition-property: opacity, transform;
-  transition-duration: 300ms;
+  transition-duration: 0.8s;
 }
-.features-section.effect .feature-area.action, .features-section.effect .text-button.action {
-  transition-timing-function: linear;
-  transition-property: opacity, transform;
-  transition-duration: 300ms;
-  transition-delay: 200ms;
+.section-main.effect .m-2.action {
+  transition-delay: 0.6s;
+}
+.section-main.effect .m-3.action {
+  transition-delay: 2s;
+}
+.section-main.effect .m-4.action {
+  transition-delay: 2.4s;
 }
 
-.section-product.effect .content.hidden {
-  transform: translateY(200px);
-  opacity: 0;
-}
-.section-product.effect h2.hidden {
-  transform: translateY(30px);
-  opacity: 0;
-}
-.section-product.effect dl.hidden {
+.features-section.effect .li-1.hidden, .features-section.effect .li-2.hidden, .features-section.effect .li-3.hidden {
   transform: translateY(300px);
   opacity: 0;
 }
-.section-product.effect .content.action, .section-product.effect dl.action {
+.features-section.effect .li-1.action, .features-section.effect .li-2.action, .features-section.effect .li-3.action {
   transition-timing-function: linear;
   transition-property: opacity, transform;
-  transition-duration: 600ms;
+  transition-duration: 0.4s;
 }
-.section-product.effect h2.action {
-  transition-timing-function: linear;
-  transition-property: opacity, transform;
-  transition-duration: 400ms;
-  transition-delay: 50ms;
+.features-section.effect .li-2.action {
+  transition-delay: 0.4s;
 }
-.section-product.effect dl.action:nth-of-type(1) {
-  transition-delay: 400ms;
-}
-.section-product.effect dl.action:nth-of-type(2) {
-  transition-delay: 700ms;
+.features-section.effect .li-3.action {
+  transition-delay: 0.8s;
 }
 
-.token-section.effect .token-top.hidden, .token-section.effect .section-token.hidden {
+.section-product.effect .content.hidden, .section-product.effect .m-1.hidden, .section-product.effect .m-2.hidden, .section-product.effect .m-3.hidden {
+  opacity: 0;
+}
+.section-product.effect .content.hidden {
+  transform: translateY(580px);
+}
+.section-product.effect .m-1.hidden {
   transform: translateY(100px);
-  opacity: 0;
 }
-.token-section.effect h2.hidden, .token-section.effect a.hidden {
-  transform: translateY(30px);
-  opacity: 0;
+.section-product.effect .m-2.hidden {
+  transform: translateY(40px);
 }
-.token-section.effect ul.hidden {
-  transform: translateY(50px);
-  opacity: 0;
+.section-product.effect .m-3.hidden {
+  transform: translateY(180px);
 }
-.token-section.effect .token-top.action, .token-section.effect .section-token.action {
+.section-product.effect .content.action, .section-product.effect .m-1.action, .section-product.effect .m-2.action, .section-product.effect .m-3.action {
   transition-timing-function: linear;
   transition-property: opacity, transform;
-  transition-duration: 700ms;
+  transition-duration: 0.6s;
 }
-.token-section.effect h2.action, .token-section.effect ul.action, .token-section.effect a.action {
-  transition-timing-function: linear;
-  transition-property: opacity, transform;
+.section-product.effect .m-1.action {
   transition-duration: 300ms;
+  transition-delay: 0.6s;
 }
-.token-section.effect ul.action {
-  transition-duration: 500ms;
-  transition-delay: 200ms;
+.section-product.effect .m-2.action {
+  transition-duration: 100ms;
+  transition-delay: 0.9s;
 }
-.token-section.effect a.action {
-  transition-duration: 500ms;
-  transition-delay: 300ms;
+.section-product.effect .m-3.action {
+  transition-duration: 300ms;
+  transition-delay: 1s;
 }
 
-.section-why.effect .content.hidden {
-  transform: translateY(100px);
+.section-why.effect .m-1.hidden, .section-why.effect .m-3.hidden {
+  transform: translateY(240px);
   opacity: 0;
 }
-.section-why.effect h2.hidden, .section-why.effect dl.hidden {
-  transform: translateY(30px);
+.section-why.effect .m-2.hidden, .section-why.effect .m-4.hidden {
+  transform: translateY(480px);
   opacity: 0;
 }
-.section-why.effect .content.action {
+.section-why.effect .m-1.action, .section-why.effect .m-2.action, .section-why.effect .m-3.action, .section-why.effect .m-4.action {
   transition-timing-function: linear;
   transition-property: opacity, transform;
-  transition-duration: 600ms;
+  transition-duration: 0.6s;
 }
-.section-why.effect h2.action, .section-why.effect dl.action {
+.section-why.effect .m-2.action {
+  transition-delay: 0.2s;
+}
+.section-why.effect .m-3.action {
+  transition-delay: 0.4s;
+}
+.section-why.effect .m-4.action {
+  transition-delay: 0.6s;
+}
+
+.token-section.effect .m-1.hidden {
+  transform: translateY(400px);
+  opacity: 0;
+}
+.token-section.effect .m-2.hidden, .token-section.effect .m-3.hidden, .token-section.effect .m-4.hidden, .token-section.effect .m-5.hidden, .token-section.effect .m-6.hidden {
+  transform: translateY(200px);
+  opacity: 0;
+}
+.token-section.effect .m-1.action {
   transition-timing-function: linear;
   transition-property: opacity, transform;
-  transition-duration: 200ms;
+  transition-duration: 0.8s;
 }
-.section-why.effect dl.action {
-  transition-delay: 100ms;
+.token-section.effect .m-2.action, .token-section.effect .m-3.action, .token-section.effect .m-4.action, .token-section.effect .m-5.action, .token-section.effect .m-6.action {
+  transition-timing-function: linear;
+  transition-property: opacity, transform;
+  transition-duration: 0.5s;
 }
-.section-why.effect dl.action:nth-child(2) {
-  transition-delay: 200ms;
+.token-section.effect .m-2.action {
+  transition-delay: 0.8s;
 }
-.section-why.effect dl.action:nth-child(3) {
-  transition-delay: 300ms;
+.token-section.effect .m-3.action {
+  transition-delay: 1s;
 }
-.section-why.effect dl.action:nth-child(4) {
-  transition-delay: 400ms;
+.token-section.effect .m-4.action {
+  transition-delay: 1.2s;
 }
-.section-why.effect dl.action:nth-child(5) {
-  transition-delay: 500ms;
+.token-section.effect .m-5.action {
+  transition-delay: 1.4s;
 }
-.section-why.effect dl.action:nth-child(6) {
-  transition-delay: 600ms;
+.token-section.effect .m-6.action {
+  transition-delay: 1.6s;
 }
 
 .ecosystem-section.effect .section-ecosystem.hidden {
@@ -178,6 +189,7 @@
   transition-delay: 800ms;
 }
 
+.section-main.init,
 .features-section.init,
 .section-product.init,
 .token-section.init,
@@ -187,6 +199,7 @@
   opacity: 0;
 }
 
+.section-main.effect,
 .features-section.effect,
 .section-product.effect,
 .token-section.effect,
