--- a/style/info.css
+++ b/style/info.css
@@ -249,7 +249,11 @@ p {
   padding-bottom: 120px;
 }
 .section-product h2 {
+  margin-top: 36px;
   margin-bottom: 96px;
+}
+.section-product .content {
+  padding-top: 0;
 }
 .section-product .product-content {
   font-family: "PingFangSC-Medium, PingFang SC";
