--- a/style/info.css
+++ b/style/info.css
@@ -124,6 +124,10 @@ p {
   top: 0;
   left: 0;
 }
+.section-main .container .main-item:last-child {
+  width: 890px;
+  margin-left: -135px;
+}
 .section-main .container .image {
   position: absolute;
   width: 100%;
@@ -150,7 +154,7 @@ p {
   animation: change 20s linear infinite;
 }
 .section-main .button {
-  margin: 0 auto;
+  margin: 0 auto 150px auto;
 }
 
 .h2-underline {
@@ -1386,6 +1390,13 @@ p {
 
   .section-main .container {
     margin-top: 30px;
+  }
+  .section-main .container .main-item:last-child {
+    width: 100%;
+    margin-left: 0;
+  }
+  .section-main .button {
+    margin-bottom: 0;
   }
 
   .section-contain {
