--- a/sass/info.scss
+++ b/sass/info.scss
@@ -306,6 +306,7 @@ p {
 }
 
 .token-section {
+  background: url('../image/index/dot.svg') 0 0 repeat;
   background-color: #282A34;
   padding-bottom: 96px;
   h2 {
