--- a/style/info.css
+++ b/style/info.css
@@ -295,6 +295,7 @@ p {
 }
 
 .token-section {
+  background: url("../image/index/dot.svg") 0 0 repeat;
   background-color: #282A34;
   padding-bottom: 96px;
 }
