--- a/sass/effect.scss
+++ b/sass/effect.scss
@@ -1,9 +1,9 @@
 .section-main.effect {
-  .m-1.hidden, .m-2.hidden, .m-3.hidden {
+  .m-1.hidden, .m-2.hidden {
     transform: translateY(620px);
     opacity: 0;
   }
-  .m-4.hidden {
+  .m-3.hidden, .m-4.hidden {
     transform: translateY(100px);
     opacity: 0;
   }
@@ -14,13 +14,16 @@
     transition-duration: 0.8s;
   }
   .m-2.action {
+    transition-duration: 0.6s;
     transition-delay: 0.6s;
   }
   .m-3.action {
-    transition-delay: 2s;
+    transition-duration: 0.2s;
+    transition-delay: 1.4s;
   }
   .m-4.action {
-    transition-delay: 2.4s;
+    transition-duration: 0.2s;
+    transition-delay: 1.8s;
   }
 }
 
@@ -121,7 +124,7 @@
   .m-1.action {
     transition-timing-function: linear;
     transition-property: opacity, transform;
-    transition-duration: 0.8s;
+    transition-duration: 0.6s;
 
   }
   .m-2.action, .m-3.action, .m-4.action, .m-5.action, .m-6.action {
